[package]
name = "cyphernet"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@cyphernet.org>"]
description = "Cyphernet is a set of libraries for privacy-preserving networking apps"
repository = "https://github.com/Cyphernet-WG/rust-cyphernet"
homepage = "https://cyphernet.org"
keywords = ["privacy", "noise-framework", "noise-protocol", "cypherpunk", "mixnet", "tor", "nym", "i2p"]
categories = ["network-programming", "cryptography", "encoding"]
readme = "README.md"
rust-version = "1.65"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Elliptic curves
secp256k1 = { version = "0.25.0", optional = true }
ed25519-compact = { version = "2.0.2", default-features = false, optional = true }
# Stream symmetric encoders
chacha20poly1305 = { version = "0.10.1", optional = true }
# Digest algorithms
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.6", optional = true }
sha3 = { version = "0.10.6", optional = true }
blake3 = { version = "1.3.3", optional = true }
# Utilities and serialization:
amplify = "4.0.0-beta.4"
multibase = { version = "0.9.1", optional = true }
base32 = { version = "0.4.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []

# Mixnets
tor = ["sha3", "ed25519", "base32"]
i2p = ["ed25519"]
nym = []
mixnets = ["tor", "i2p", "nym"]
dns = []

# Elliptic curve algorithms
x25519 = ["ed25519-compact/x25519"]
ed25519 = ["ed25519-compact/ed25519"]
bip340 = ["secp256k1"]

# Digest algorithms
# Defined by existing features:
# - sha2
# - sha3
# - blake3

# Other
pem = ["ed25519-compact/pem"]
noise = ["sha2", "hmac", "chacha20poly1305", "ed25519-compact/random"]
