[workspace]
default-members = [
    "addr",
    "cyphergraphy",
    "socks5-client",
    "noise",
    ".",
]

[workspace.package]
authors = ["Dr. Maxim Orlovsky <orlovsky@cyphernet.org>"]
homepage = "https://cyphernet.org"
repository = "https://github.com/Cyphernet-WG/rust-cyphernet"
rust-version = "1.65"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.0.0-beta.4"

###
### Main package (`cyphernet`)
###

[package]
name = "cyphernet"
version = "0.1.0"
description = "Cyphernet is a set of libraries for privacy-preserving networking apps"
keywords = ["privacy", "noise-framework", "noise-protocol", "cypherpunk", "mixnet", "tor", "nym", "i2p"]
categories = ["network-programming", "cryptography", "encoding"]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
cyphergraphy = { path = "cyphergraphy" }
cypheraddr = { path = "addr" }
noise-framework = { path = "noise", optional = true }
socks5-client = { path = "socks5-client" }

[features]
default = []

# Mixnets
tor = ["cypheraddr/tor"]
i2p = ["cypheraddr/i2p"]
nym = ["cypheraddr/nym"]
mixnets = ["tor", "i2p", "nym"]
dns = ["cypheraddr/dns"]

# Elliptic curve algorithms
x25519 = ["cyphergraphy/x25519"]
ed25519 = ["cyphergraphy/ed25519"]
secp256k1 = ["cyphergraphy/secp256k1"]
bip340 = ["cyphergraphy/bip340"]

# Digests
sha2 = ["cyphergraphy/sha2"]
sha3 = ["cyphergraphy/sha3"]
blake3 = ["cyphergraphy/blake3"]

# Noise variants algorithms
noise_sha2 = ["noise-framework/sha2"]
noise_sha3 = ["noise-framework/sha3"]
noise_blake3 = ["noise-framework/blake3"]
noise_x25519 = ["noise-framework/x25519"]
noise_secp256k1 = ["noise-framework/secp256k1"]

# Other
pem = ["cyphergraphy/pem"]
multibase = ["cyphergraphy/multibase"]
serde = ["cypheraddr/serde"]
