[package]
name = "cypheraddr"
version = "0.3.0"
description = "Network address types supporting proxying, mixnets, P2P with minimalistic dependencies (part of cyphernet suite)"
keywords = ["cyphernet", "privacy", "tor", "nym", "i2p"]
categories = ["network-programming", "encoding"]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
amplify = { workspace = true }
cyphergraphy = { workspace = true, optional = true }
sha3 = { version = "0.10.6", optional = true }
base32 = { version = "0.4.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
dns = []
tor = ["sha3", "cyphergraphy/ed25519", "base32"]
i2p = ["cyphergraphy/ed25519"]
nym = []
p2p-ed25519 = ["cyphergraphy/ed25519"]
p2p-secp256k1 = ["cyphergraphy/secp256k1"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
