[package]
name = "cyphergraphy"
version = "0.1.0"
description = "Implementation-independent abstractions for main cryptographic algorithms (part of cyphernet suite)"
keywords = ["cyphernet", "privacy", "secp256k1", "curve25519", "ed25519", "schnorr"]
categories = ["network-programming", "cryptography"]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "cypher"

[dependencies]
amplify = { workspace = true }
multibase = { version = "0.9.1", optional = true }
# Elliptic curves
secp256k1 = { version = "0.25.0", optional = true }
ed25519-compact = { version = "2.0.2", default-features = false, optional = true }
sha2 = { version = "0.10.6", optional = true }
sha3 = { version = "0.10.6", optional = true }
blake3 = { version = "1.3.3", optional = true }
hmac = { version = "0.12.1", optional = true }

[features]
x25519 = ["ed25519-compact/x25519"]
ed25519 = ["ed25519-compact/ed25519"]
keygen_25519 = ["ed25519-compact/random"]
keygen_secp256k1 = ["secp256k1/rand"]
bip340 = ["secp256k1"]

# Digests:
# sha2
# sha3
# blake3
# hmac

# Other:
pem = ["ed25519-compact/pem", "ed25519-compact/std"]
# multibase
