[package]
name = "cyphergraphy"
version = "0.1.0"
description = "Implementation-independent abstractions for main cryptographic algorithms (part of cyphernet suite)"
keywords = ["cyphernet", "privacy", "secp256k1", "curve25519", "ed25519"]
categories = ["network-programming", "cryptography"]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "cypher"

[dependencies]
amplify = { workspace = true }
# Elliptic curves
secp256k1 = { version = "0.26.0", features = ["rand"], optional = true }
ec25519 = { version = "0.1.0", default-features = false, optional = true }
sha2 = { version = "0.10.6", optional = true }
sha3 = { version = "0.10.6", optional = true }
blake3 = { version = "1.3.3", optional = true }
# Encodings
bech32 = { version = "0.9.1", optional = true }
multibase = { version = "0.9.1", optional = true }

[features]
x25519 = ["ec25519/x25519"]
ed25519 = ["ec25519/ed25519", "ec25519/random"]
keygen_25519 = ["ec25519/random"]
keygen_secp256k1 = ["secp256k1"]
bip340 = ["secp256k1"]

## Digests:
# sha2
# sha3
# blake3

## Encodings:
# multibase
# bech32

# Other:
pem = ["ec25519/pem", "ec25519/std"]
# multibase

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
