[package]
name = "noise-framework"
version = "0.1.0"
description = "Noise protocol framework in functional style"
keywords = ["cyphernet", "privacy", "noise", "end-to-end", "ecryption"]
categories = ["network-programming", "cryptography"]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "noise"

[dependencies]
cyphergraphy = { path = "../cyphergraphy" }
amplify = { workspace = true }
# Stream symmetric encoders
chacha20poly1305 = { version = "0.10.1" }

[features]
# Elliptic curves
x25519 = ["cyphergraphy/x25519"]
secp256k1 = ["cyphergraphy/secp256k1"]
# Digest algorithms
sha2 = ["cyphergraphy/sha2"]
sha3 = ["cyphergraphy/sha3"]
blake3 = ["cyphergraphy/blake3"]
