[package]
name = "noise_xk"
version = "0.1.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Noise_XK Transport Layer Security protocol implementation"
repository = "https://github.com/Cyphernet-WG/rust-cyphernet"
keywords = ["cyphernet", "noise-xk", "privacy", "cryptography"]
categories = ["network-programming", "cryptography", "encoding"]
license = "MIT"
edition = "2021"
rust-version = "1.59.0"

[dependencies]
amplify = "4.0.0-beta.1"
chacha20poly1305 = "0.9.1"
sha2 = "0.10.2"
hmac = "0.12.1"
ed25519-compact = { version = "2.0.4", features = ["x25519"] }
