[package]
name = "socks5-client"
version = "0.4.1"
description = "Socks5 clinet minimalistic library"
keywords = ["cyphernet", "privacy", "noise", "end-to-end", "ecryption"]
categories = ["network-programming", "cryptography"]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
amplify = { workspace = true }
cypheraddr = { workspace = true }

[features]
dns = ["cypheraddr/dns"]
tor = ["cypheraddr/tor"]
nym = ["cypheraddr/nym"]
i2p = ["cypheraddr/i2p"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
